setup html and stopwatch module

--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
                 <button id="saveFavoriteBtn" class="btn">Save This Workout</button>
                 <button id="clearWorkoutBtn" class="btn ghost">Clear</button>
             </div>
+
+            <h2>Stopwatch</h2>
+            <p>A stopwatch, you can also press space to start/stop it</p>
+            <div class="stopwatchButtons">
+                <button id="stopwatchStartpBtn">Start</button>
+                <button id="stopwatchSplitBtn">Split</button>
+                <button id="stopwatchResetBtn">Reset</button>
+            </div>
+            <p id="stopwatchMainTimer">Timer: 20:20:20</p>
+            <div id="splitList"></div>
         </main>
 
         <script type="module" src="app.js"></script>
