made start and reset button work

--- a/index.html
+++ b/index.html
@@ -40,9 +40,13 @@
             </div>
 
             <h2>Stopwatch</h2>
-            <p>A stopwatch, you can also press space to start/stop it</p>
+            <p>Keyboard controls:</p>
+            <ul>
+                <li>Space: Start/pause</li>
+                <li>Enter: Split</li>
+            </ul>
             <div class="stopwatchButtons">
-                <button id="stopwatchStartpBtn">Start</button>
+                <button id="stopwatchStartBtn">Start</button>
                 <button id="stopwatchSplitBtn">Split</button>
                 <button id="stopwatchResetBtn">Reset</button>
             </div>
