--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         </header>
 
         <main class="container grid">
+            <!-- generator -->
             <h2> Pick your muscle groups </h2>
             <form id="generationForm" class="controls">
                 <div class="muscle-group-checkboxes">
@@ -38,7 +39,8 @@
                 <button id="saveFavoriteBtn" class="btn">Save This Workout</button>
                 <button id="clearWorkoutBtn" class="btn ghost">Clear</button>
             </div>
-
+            
+            <!-- stopwatch -->
             <h2>Stopwatch</h2>
             <p>Keyboard controls:</p>
             <ul>
