change split from enter to shift

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
                 <button id="saveFavoriteBtn" class="btn">Save This Workout</button>
                 <button id="clearWorkoutBtn" class="btn ghost">Clear</button>
             </div>
-            
+
             <!-- stopwatch -->
             <h2>Stopwatch</h2>
             <p>Keyboard controls:</p>
             <ul>
                 <li>Space: Start/pause</li>
-                <li>Enter: Split</li>
+                <li>Shift: Split</li>
             </ul>
             <div class="stopwatchButtons">
                 <button id="stopwatchStartBtn">Start</button>
