--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8"/>
         <title>FlexForge</title>
         <link rel="stylesheet" href="styles.css"/>
+        <link rel="manifest" href="manifest.json"/>
     </head>
 
     <body>
