--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
             </div>
             <p id="stopwatchMainTimer">Timer: 20:20:20</p>
             <div id="splitList"></div>
+
+            <!-- Saved workouts -->
+             <h2>Saved Workouts</h2>
+             <p>None</p>
         </main>
 
         <script type="module" src="app.js"></script>
