saving and loading

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
             <!-- Saved workouts -->
              <h2>Saved Workouts</h2>
-             <p>None</p>
+             <div id="savedWorkoutsOutput"></div>
         </main>
 
         <script type="module" src="app.js"></script>
