--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
         <header>
-            <div class="card">
+            <div class="card" id="titleCard">
                 <h1>FlexForge</h1>
                 <p class="description">Create randomized workouts for each muscle group!</p>
             </div>
@@ -84,6 +84,6 @@
             </div>
         </main>
 
-        <script type="module" src="app.js"></script>
+        <script type="module" src="src/app.js"></script>
     </body>
 </html>
