moved more stuff around + added parcel

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8"/>
         <title>FlexForge</title>
         <link rel="stylesheet" href="styles.css"/>
-        <link rel="manifest" href="manifest.json"/>
+        <link rel="manifest" href="/manifest.json"/>
     </head>
 
     <body>
@@ -84,6 +84,6 @@
             </div>
         </main>
 
-        <script type="module" src="src/app.js"></script>
+        <script type="module" src="/src/app.js"></script>
     </body>
 </html>
