--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
             <!-- notes -->
             <div class="card">
-                <h2>4) Notes (Weights, Reps, Thoughts)</h2>
+                <h2> Notes (Weights, Reps, Thoughts)</h2>
                 <textarea id="notes" rows="10" placeholder="Example: 10/27/2025 — Bench 3×8 (135 lb), Squat 3×5 (185 lb)..."></textarea>
                 <div class="row">
                 <span class="muted" id="notesStatus">Saved.</span>
